--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+     METAS PESSOAIS 2024
+    </h1>
+    <ul>
+    <li>
+    1.Bem estar, fisico e mental.
+    </li>
+    <li>
+    2.Passar no vestibular.
+    </li>
+    </ul>
 </body>
 </html>
