--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
      METAS PESSOAIS 2024
     </h1>
     <ul>
-    <li>
-    1.Bem estar, fisico e mental.
-    </li>
-    <li>
-    2.Passar no vestibular.
-    </li>
+        <li>
+            <h2>1.Passar no vestibular.</h2>
+            <h3></h3>
+            <h4></h4>
+        </li>
+
+        <li>
+            <h2>2.Bem estar, fisico e mental</h2>
+            <h3></h3>
+            <h4></h4>
+        </li> 
+
     </ul>
 </body>
 </html>
