--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
     </h1>
     <ul>
         <li>
-            <h2>1.Passar no vestibular.</h2>
-            <h3></h3>
-            <h4></h4>
+            <h2>1.PASSAR NO VESTIBULAR!</h2>
+            <h3>Buscar a aprovação é, antes de tudo, um projeto de vida.
+                Isso porque vencer o vestibular vai muito além de ter o nome na lista de aprovados! </h3>
+            <h4>Até Dezembro.</h4>
         </li>
 
         <li>
-            <h2>2.Bem estar, fisico e mental</h2>
-            <h3></h3>
-            <h4></h4>
+            <h2>2.FOCAR NA ACADEMIA!</h2>
+            <h3>Um estilo de vida saudável,promove uma diminuição de riscos de doenças cardiovasculares e metabólicas, além de favorecer o aspecto físico.</h3>
+            <h4>Está meta não tem um prazo para acabar, pois pretendo seguir essa rotina ao longo de toda a minha vida.</h4>
         </li> 
+
+        <li>
+            <h2>3.CONSEGUIR UMA BOA EVOLUÇÂO NOS ESTUDOS!.</h2>
+            <h3>Minha meta principal para esse ano, é passar no vestibular! Mas sem estudo,foco e persistencia isso nao será possivel. Sendo assim, minha meta para esse ano é conseguir seguir um cronograma de estudos, sem que algo atrapalhe meu foco, ou a minha concentração. </h3>
+            <h4>Até Dezembro.</h4>
+        </li>
+
+        <li>
+            <h2>4.TER UMA ALIMENTAÇÂO SAUDAVEL!</h2>
+            <h3>Buscar a aprovação é, antes de tudo, um projeto de vida.
+                Isso porque vencer o vestibular vai muito além de ter o nome na lista de aprovados! </h3>
+            <h4>Até Dezembro.</h4>
+        </li>
+
+
 
     </ul>
 </body>
