--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
 
         <li>
             <h2>4.TER UMA ALIMENTAÇÂO SAUDAVEL!</h2>
-            <h3>Buscar a aprovação é, antes de tudo, um projeto de vida.
-                Isso porque vencer o vestibular vai muito além de ter o nome na lista de aprovados! </h3>
-            <h4>Até Dezembro.</h4>
+            <h3> ajuda a proteger contra a má nutrição em todas as suas formas, bem como contra as doenças crônicas não transmissíveis (DCNT), entre elas diabetes, doenças cardiovasculares, AVC e câncer </h3>
+            <h4>A longo prazo!</h4>
         </li>
 
+        <li>
+            <h2>5.Frazer uma grande viagem como conhecer um novo lugar!</h2>
+            <h3> Sair de casa e conhecer novos ambientes, culturas e paisagens é uma excelente forma de reduzir o stress. Além disso, a interação com outras pessoas e as boas memórias que se criam durante as viagens são algo que vais levar contigo para a vida toda e que podem alegrar-te todos os dias.</h3>
+            <h4>A longo prazo!</h4>
+        </li>
+        
+        
 
 
     </ul>
