--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
             <h4>A longo prazo!</h4>
         </li>
         
-        
+        <li>
+            <h2>6. TEMPO DE QUALIDADE COM PESSOAS QUE EU AMO!</h2>
+            <h3>Um estilo de vida saudável,promove uma diminuição de riscos de doenças cardiovasculares e metabólicas, além de favorecer o aspecto físico.</h3>
+            <h4>Está meta não tem um prazo para acabar, pois pretendo seguir essa rotina ao longo de toda a minha vida.</h4>
+        </li> 
 
 
     </ul>
